--- a/app/views/redespachos/index.html.erb
+++ b/app/views/redespachos/index.html.erb
@@ -27,7 +27,7 @@
 					  <% if @redespacho.errors.any? %>
 					    <div id="error_explanation">
 						  <div class="alert alert-danger" role="alert">
-						  	<strong>Erro salvar empresa:</strong>
+						  	<strong>Erro salvar redespacho:</strong>
 						  	<br/><br/>
 						    <ul>
 						    	<% @redespacho.errors.full_messages.each do |message| %>
