--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -89,9 +89,9 @@
                             <div class="nav-tabs-custom">
                                 <!-- Tabs within a box -->
                                 <ul class="nav nav-tabs pull-right">
-                                    <li class="active"><a href="#revenue-chart" data-toggle="tab">Area</a></li>
-                                    <li><a href="#sales-chart" data-toggle="tab">Donut</a></li>
-                                    <li class="pull-left header"><i class="fa fa-inbox"></i> Sales</li>
+                                    <li class="active"><a href="#revenue-chart" data-toggle="tab">Dolar</a></li>
+                                    <li><a href="#sales-chart" data-toggle="tab">Euro</a></li>
+                                    <li class="pull-left header"><i class="fa fa-inbox"></i> Cotações</li>
                                 </ul>
                                 <div class="tab-content no-padding">
                                     <!-- Morris chart - Sales -->
