--- a/app/views/fornecedores/index.html.erb
+++ b/app/views/fornecedores/index.html.erb
@@ -13,59 +13,7 @@
 		
 	</div>
 	
-	<script>
-	 
-	</script>
 	<div id='nova_empresa_window' class="jqx-widget-content, jqx-input, jqx-widget, jqx-rc-all">
-		<div>
-		<%= form_for(@fornecedor, :remote => true, :html => { :role => "form", :class =>"form-horizontal"}) do |f| %>
-		  <% if @fornecedor.errors.any? %>
-		    <div id="error_explanation">
-			  <div class="alert alert-danger" role="alert">
-			  	<strong>Erro salvar empresa:</strong>
-			  	<br/><br/>
-			    <ul>
-			    	<% @fornecedor.errors.full_messages.each do |message| %>
-			        	<li><%= message %></li>
-			      	<% end %>
-			    </ul>
-			   </div>
-		    </div>
-		  <% end %>
-			<div class="">
-	            <div style="overflow: hidden;">
-					<table>
-		                <tr>
-		                    <td align="right">Nome</td>
-		                    <td align="left"><%= f.text_field :nome, :class => "input_class" %></td>
-		                </tr>
-		                <tr>
-		                    <td align="right">Razção social</td>
-		                    <td align="left"><%= f.text_field :razao_social, :class => 'input_class' %></td>
-		                </tr>
-		                <tr>
-		                    <td align="right">CNPJ</td>
-		                    <td align="left"><%= f.text_field :cnpj, :class => 'input_class', :data =>{:mask =>"99.999.999/9999-99"} %></td>
-		                </tr>
-		                <tr>
-		                    <td align="right">Telefone</td>
-		                    <td align="left"><%= f.text_field :telefone, :class => 'input_class', :data =>{:mask =>"(999)9999-9999?9"} %></td>
-		                </tr>
-		                <tr>
-		                    <td align="right">Responsavel</td>
-		                    <td align="left"><%= f.text_field :responsavel, :class => 'input_class' %></td>
-		                </tr>
-		                <tr>
-		                	<td align="right"></td>
-		                    <td style="padding-top: 10px;" align="right">
-		                		<%= f.submit 'Salvar', :id => 'Save', :class => "" %>
-								<%= link_to 'Cancelar', '#', :id => 'Cancel', :class => "btn_fechar" %>
-							</td>
-		               	</tr>
-		            </table>
-				</div>
-			<% end %>
-			</div>
-		</div>
+		<%= render 'form' %>
 	</div>
 </section>
