--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,8 @@
                                     <%= image_tag(current_user.avatar) %>
                                     <p>
                                         <%= current_user.nome %>
-                                        <small>Ultimo acesso em <%= current_user.last_sign_in_at %></small>
+                                        <small><%= (current_user.empresa.nil? ) ? current_user.supervisor.nome : current_user.empresa.nome %></small>
+                                        <small>Ultimo acesso em <%= current_user.last_sign_in_at %></small>                                        
                                     </p>
                                 </li>
                                 <!-- Menu Footer-->
@@ -89,10 +90,12 @@
                         </div>
                         <div class="pull-left info">
                             <p>Olá, <%= current_user.nome %></p>
-
+                           
                             <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                         </div>
+                        
                     </div>
+                    
                     <!-- sidebar menu: : style can be found in sidebar.less -->
                     <ul class="sidebar-menu">
                         <li class="<%= params[:controller] == 'dashboard' ? 'active' : '' %>">
@@ -132,7 +135,19 @@
                                 <li><%= link_to relatorio_por_codigo_relatorios_path do %> <i class="fa fa-angle-double-right"></i> Relatorios por codigo <% end %></li>
                             </ul>
                         </li>
-                        
+                        <% if can? :manage, Empresa %>
+                        <li class="treeview <%= params[:controller] == 'relatorios' ? 'active' : '' %>">
+                            <a href="#">
+                                <i class="fa  fa-institution"></i>
+                                <span>Empresas</span>
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </a>
+                            <ul class="treeview-menu">
+                            	<li><%= link_to empresas_path do %> <i class="fa fa-angle-double-right"></i> Empresas <% end %></li>
+                                <li><%= link_to new_empresa_path do %> <i class="fa fa-angle-double-right"></i> Nova empresa <% end %></li>
+                            </ul>
+                        </li>
+                        <% end %>
                     </ul>
                 </section>
                 <!-- /.sidebar -->
@@ -141,7 +156,7 @@
 	
 	    <!-- Right side column. Contains the navbar and content of the page -->
 	    <aside class="right-side">
-	        <%= yield %>
+	    	<%= yield %>
 	    </aside><!-- /.right-side -->
 	</div><!-- ./wrapper -->	
 	
