Removido nome da empresa
Removido nome da empresa

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,8 @@
                                     <%= image_tag(current_user.avatar) %>
                                     <p>
                                         <%= current_user.nome %>
-                                        <small><%= (current_user.empresa.nil? ) ? current_user.supervisor.nome : current_user.empresa.nome %></small>
+                                        <small><%= #(current_user.empresa.nil? ) ? current_user.supervisor.nome : current_user.empresa.nome 
+                                        %></small>
                                         <small>Ultimo acesso em <%= current_user.last_sign_in_at %></small>                                        
                                     </p>
                                 </li>
