--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,64 +1,57 @@
 
-<section class="content-header">
-	<h1>Novo usuário</h1>
-	<ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-        <li><%= link_to users_path do %><i class="fa fa-users"></i> Usuarios<% end %></li>
-        <li class="active fa fa-user">Novo</li>
-    </ol>  
-</section>
-<section class="content">
-	<div class="row">
-		<div class="col-md-6">
-			<div class="box box-primary">
-			    <div class="box-header">
-			        <h3 class="box-title">Novo Usuário</h3>
-			    </div>
-				<%= form_for(@user, :html => { :role => "form"}) do |f| %>
-				  <% if @user.errors.any? %>
-				    <div id="error_explanation">
-					  <div class="alert alert-danger" role="alert">
-					  	<strong>Erro salvar usuário!</strong>
-					  	<br/><br/>
-					    <ul>
-					    	<% @user.errors.full_messages.each do |message| %>
-					        	<li><%= message %></li>
-					      	<% end %>
-					    </ul>
-					   </div>
-				    </div>
-				  <% end %>
-				  <div class="box-body">
-				  	<div class="form-group">
-		                <%= f.label :nome, 'Nome'%>
-		                <%= f.text_field :nome, :class =>"form-control", :placeholder=> :nome %>
-		            </div>
-		            <div class="form-group">
-		                <%= f.label :email, 'Email' %>
-		                <%= f.email_field :email, :class =>"form-control", :placeholder=> :email %>
-		            </div>
-		            <div class="form-group">
-		                <%= f.label :password, 'Senha' %>
-		                <%= f.password_field :password, :class =>"form-control", :placeholder=> :senha %>
-		            </div>
-		            <div class="form-group">
-		                <%= f.label :password_confirmation, 'Confirme sua senha'%>
-		                <%= f.password_field :password_confirmation, :class =>"form-control", :placeholder=> 'Confirme sua senha' %>
-		            </div>
-		            <div class="form-group">
-		                <%= f.label :nome, 'Nome'%>
-		                <%= f.text_field :nome, :class =>"form-control", :placeholder=> :nome %>
-		            </div>
-				  </div>
-				  <div class="box-footer">
-				  	<%= f.submit 'Salvar', :class => "btn btn-primary" %>
-		          </div>
-			   </div>
-				<% end %>
-				
-			</div>
-	</div>
-</section>
+<div class="row">
+	<div class="col-md-12">
+		<div class="box box-primary">
+		    <div class="box-header">
+		        <h3 class="box-title">Novo Usuário</h3>
+		    </div>
+			<%= form_for(@user, :html => { :role => "form"}) do |f| %>
+				<div class="col-md-12">
+			  		<div id='error_messages'></div>
+			  	</div>
+			  	<% if @user.errors.any? %>
+			    	<div id="error_explanation">
+				  		<div class="alert alert-danger" role="alert">
+				  			<strong>Erro salvar usuário!</strong>
+					  		<br/><br/>
+					    	<ul>
+						    	<% @user.errors.full_messages.each do |message| %>
+						        	<li><%= message %></li>
+						      	<% end %>
+					    	</ul>
+				   		</div>
+			    	</div>
+			  <% end %>
+			  <div class="box-body">
+			  	<div class="form-group">
+	                <%= f.label :nome, 'Nome'%>
+	                <%= f.text_field :nome, :class =>"form-control", :placeholder=> :nome %>
+	            </div>
+	            <div class="form-group">
+	                <%= f.label :email, 'Email' %>
+	                <%= f.email_field :email, :class =>"form-control", :placeholder=> :email %>
+	            </div>
+	            <div class="form-group">
+	                <%= f.label :password, 'Senha' %>
+	                <%= f.password_field :password, :class =>"form-control", :placeholder=> :senha %>
+	            </div>
+	            <div class="form-group">
+	                <%= f.label :password_confirmation, 'Confirme sua senha'%>
+	                <%= f.password_field :password_confirmation, :class =>"form-control", :placeholder=> 'Confirme sua senha' %>
+	            </div>
+	            <div class="form-groud">
+	            	<%= u.label :role %><br />
+				    <%= u.select :role, options_for_select(User::ROLES), {}, :class =>"combo form-control" %>
+	            </div>
+			  </div>
+			  <div class="box-footer">
+			  	<%= f.submit 'Salvar', :class => "btn btn-primary" %>
+			  	<%= link_to 'Cancelar', '#', :id => 'Cancel', :class => "btn_fechar btn btn-cancel" %>
+	          </div>
+		   </div>
+			<% end %>
+		</div>
+</div>
 
 
 <!-- 
