--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,64 +22,7 @@
 	</div>
 	
 	<div id="new_register_window">
-		<div class="row">
-			<%= form_for(@user, :remote => true, :html => {:id => 'new_register', :role => "form", :class =>"form-horizontal"}) do |f| %>
-					  <% if @user.errors.any? %>
-					    <div id="error_explanation">
-						  <div class="alert alert-danger" role="alert">
-						  	<strong>Erro salvar empresa:</strong>
-						  	<br/><br/>
-						    <ul>
-						    	<% @user.errors.full_messages.each do |message| %>
-						        	<li><%= message %></li>
-						      	<% end %>
-						    </ul>
-						   </div>
-					    </div>
-					  <% end %>
-					  <div class="col-md-12">
-						<div class="box box-primary">
-						    <div class="box-header">
-						        <h3 class="box-title">Dados da encomenta</h3>
-						    </div>
-						<div class="box-body">
-							<div class="form-group">
-				                <%= f.label :nome, 'Nome'%>
-				                <%= f.text_field :nome, :class =>"form-control", :placeholder=> :nome %>
-				            </div>
-				            <div class="form-group">
-				                <%= f.label :email, 'Email' %>
-				                <%= f.email_field :email, :class =>"form-control", :placeholder=> :email %>
-				            </div>
-				            <div class="form-group">
-				                <%= f.label :password, 'Senha' %>
-				                <%= f.password_field :password, :class =>"form-control", :placeholder=> :senha %>
-				            </div>
-				            <div class="form-group">
-				                <%= f.label :password_confirmation, 'Confirme sua senha'%>
-				                <%= f.password_field :password_confirmation, :class =>"form-control", :placeholder=> 'Confirme sua senha' %>
-				            </div>
-				            <div class="form-group">
-						 		<%= f.label :status %>
-	                			<%= f.select :status, options_for_select([['Ativo'],['Inativo']], selected: @user.status), {}, :class =>"combo form-control" %>
-							</div>
-					 	</div>	
-					 </div>
-				</div>
-				
-				
-				 <div class="col-md-12">
-					<div class="box box-primary">
-						<div class="box-body">
-							<div class="box-footer">
-							  	<%= f.submit 'Salvar', :class => "btn btn-primary" %>
-							  	<%= link_to 'Cancelar', '#', :id => 'Cancel', :class => "btn_fechar btn btn-cancel" %>
-					          </div>
-					 	</div>	
-					</div>
-				</div>
-			<% end %>
-		</div>
+		<%= render 'form' %>
 	</div>
 </section>
 
