--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -39,9 +39,13 @@
 	                <%= f.label :password_confirmation, 'Confirme sua senha'%>
 	                <%= f.password_field :password_confirmation, :class =>"form-control", :placeholder=> 'Confirme sua senha' %>
 	            </div>
+	            <div class="form-group">
+	                <%= f.label :status %>
+	                <%= f.select :status, options_for_select([['Ativo'],['Inativo']], selected: @user.status), {}, :class =>" form-control combo" %>
+	            </div>
 	            <div class="form-groud">
-	            	<%= u.label :role %><br />
-				    <%= u.select :role, options_for_select(User::ROLES), {}, :class =>"combo form-control" %>
+	            	<%= f.label :role %><br />
+				    <%= f.select :role, options_for_select(User::ROLES), {}, :class =>"combo form-control" %>
 	            </div>
 			  </div>
 			  <div class="box-footer">
